syntax = "proto3";
message message_t
{
        enum Opcode {
                OP_BAD     	= 0;
                OP_SIZE    	= 10;
                OP_HEIGHT  	= 20;
                OP_DEL     	= 30;
                OP_GET     	= 40;
                OP_PUT     	= 50;
                OP_GETKEYS	= 60;
                OP_GETVALUES	= 70;
                OP_ERROR   	= 99;
        }
        Opcode opcode = 70;

        enum C_type {
                CT_BAD    	= 0;
                CT_KEY    	= 10;
                CT_VALUE  	= 20;
                CT_ENTRY  	= 30;
                CT_KEYS   	= 40;
                CT_VALUES  	= 50;
                CT_RESULT 	= 60;
                CT_NONE   	= 70;
        }
        C_type c_type = 2;
        bytes data = 3;
        sint32 data_size=4;
        message Entry_t{
                string key=1;
                bytes value=2;
        }
        oneof content {
                sint32 result=5;
                Entry_t entry=6;
                Keys_t keys = 7;
                Values_t values = 8;
            }
        message Keys_t{
                repeated string keys = 1;
        }
        message Values_t{
                repeated bytes values = 1;
        }

};
